--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.8.3",
     "ipfs-http-client": "^57.0.1",
     "next": "12.1.6",
+    "rc-progress": "^3.3.3",
     "react": "18.1.0",
     "react-dom": "18.1.0"
   },
