--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.8.3",
+    "@mui/material": "^5.8.3",
     "ipfs-http-client": "^57.0.1",
     "next": "12.1.6",
     "rc-progress": "^3.3.3",
