--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next": "12.1.6",
     "rc-progress": "^3.3.3",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-showdown": "^2.3.1"
   },
   "devDependencies": {
     "@types/node": "17.0.40",
