Added Animation to Properties

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.8.3",
     "@mui/material": "^5.8.3",
+    "framer-motion": "^6.3.11",
     "ipfs-http-client": "^57.0.1",
     "next": "12.1.6",
     "rc-progress": "^3.3.3",
