--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "rc-progress": "^3.3.3",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-hot-toast": "^2.2.0",
     "react-showdown": "^2.3.1",
     "web3modal": "^1.9.8"
   },
